name:                posix-fd-io
version:             0.1.0.0
synopsis:            IO with posix file descriptors
-- description:         
homepage:             
license:             MIT
license-file:        LICENSE
author:               
maintainer:           
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Unix.IO, System.Unix.IO.String, System.Unix.IO.Text, System.Unix.IO.ByteString
  -- other-modules:       
  other-extensions:    FlexibleInstances
  build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3, bytestring >=0.10 && <0.11, text-icu >=0.7 && <0.8, word8 >=0.1 && <0.2, unix-bytestring >= 0.3.7 && < 0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
