name:                posix-fd-io
version:             0.1.0.0
synopsis:            IO with posix file descriptors
-- description:         
homepage:             
license:             MIT
license-file:        LICENSE
author:               
maintainer:           
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Unix.ByteString.Class
  exposed-modules:     System.Unix.IO
  exposed-modules:     System.Unix.IO.Lazy
  exposed-modules:     System.Unix.IO.String
  exposed-modules:     System.Unix.IO.Text
  exposed-modules:     System.Unix.IO.ByteString
  -- other-modules:       
  other-extensions:    FlexibleInstances
  build-depends:       base             >=4.9 && <4.11
  build-depends:       text             >=1.2 && <1.3
  build-depends:       bytestring       >=0.10 && <0.11
  -- build-depends:       text-icu         >=0.7 && <0.8
  build-depends:       word8            >=0.1 && <0.2
  build-depends:       unix-bytestring  >= 0.3.7 && < 0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
